manifests/argocd/resources/dev/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "116.203.203.121"
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - argocd-dev.easysolution.work
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
